test/tests/errors/error-own-non-storeable.sm
// true
// false
// false
/**/
/**/

program {
    own x: proc() = reset;
}